# hermes-pipeline

./: .gitignore  ARCHITECTURE.md  AUDIT_ACCEPTANCE_LEDGER.json  AUDIT_DEPENDENCY_GRAPH.md  AUDIT_ENVIRONMENT.json  AUDIT_FINDINGS.json  AUDIT_INVARIANT_REGISTRY_REPORT.json  AUDIT_REMEDIATION.md  AUDIT_TEST_RESULTS.txt  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  KNOWN_LIMITATIONS.md  LICENSE  LICENSE_MATRIX.md  README.md  SECURITY.md  THREAT_MODEL.md  demo.py  installation.md  pre-flight.md  pyproject.toml
.github/workflows/: ci.yml
config/: env.example  machine-profile.yaml
docker/: Dockerfile  docker-compose.yml
docs/: agent-task-ledger.md  phase-acceptance.md  verification-ledger.md
fixtures/: slither_output_vulnerable.json
fixtures/move_patched/: Move.toml
fixtures/move_patched/sources/: PatchedVault.move
fixtures/move_vulnerable/: Move.toml
fixtures/move_vulnerable/sources/: VulnerableVault.move
fixtures/patched/src/: PatchedVault.sol
fixtures/solana_patched/: Cargo.toml
fixtures/solana_vulnerable/: Anchor.toml
fixtures/vulnerable/: foundry.toml
fixtures/vulnerable/src/: VulnerableVault.sol
invariants/: registry.json
schemas/: execution-manifest.json  finding.json  intake-manifest.json  report.json
src/orchestrator/: __init__.py  cli.py
src/orchestrator/adapters/: aderyn_adapter.py  base_adapter.py  halmos_adapter.py  (+9 more)
tests/adapters/: test_all_adapters.py  test_depth_tier.py  test_non_evm.py
tests/e2e/: test_vertical_slice_1.py
tests/unit/: test_ci_imports.py  test_classifier.py  test_invariant_registry.py  test_phase1_remaining.py
(+13 files in other folders)
