[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-pipeline"
version = "0.1.0"
description = "Smart-Contract Security-Auditing Pipeline"
requires-python = ">=3.10"

[project.scripts]
hermes-pipeline = "orchestrator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "fixtures*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true